--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 </head>
 <body>
     <header>
@@ -63,10 +64,11 @@
                 <div class="social">
                     <a href="#"><img src="./img/website.svg" alt=""></a>
                     <a href="#"><img src="./img/linkedin icon.svg" alt=""></a>
-                    <a href="#"><img src="./img/youtube.svg" alt=""></a> 
-                    <a href="#"><img src="./img/facebook.svg" alt=""></a>
+                    <a href="#"><img src="./img/youtube.svg" alt=""></a>
+                    <a href="#"><img src="./img/github.svg" alt=""></a> 
                     <a href="#"><img src="./img/instagram.svg" alt=""></a>
                     <a href="#"><img src="./img/twitter.svg" alt=""></a>
+                    <a href="#"><img src="./img/facebook.svg" alt=""></a>
                     <a href="#"><img src="./img/Pinterest.svg" alt=""></a>
                 </div>
         </div>
@@ -112,5 +114,50 @@
     </div>
 
 </section>
+
+<section class="freelancer">
+    <h1>I am available for Oppertunity</h1>
+    <p>We provide high quality of professional works</p>
+    <button class="btn btn-primary">Download CV</button>
+
+</section>
+
+<section class="reviews">
+    <div class="container">
+        <h1 class="section-heading"><span>Our </span>Clients</h1>
+        <p>We provide high quality of professional works</p>
+        <div class="slider">
+            <div class="slide">
+                <img src="./img/lady.png" alt="">
+                <p>Glassdoor's annual Employees' Choice Awards honor the Best Places to Work across North America and parts of Europe.
+                    Making the case for a promotion or raise is a nerve-wracking process for any employee, but is it a fair playing field. </p>
+                    <span>-John Doel | Fouder, ABC</span>
+            </div>
+            <div class="slide">
+                <img src="./img/lady.png" alt="">
+                <p>Glassdoor's annual Employees' Choice Awards honor the Best Places to Work across North America and parts of Europe.
+                    Making the case for a promotion or raise is a nerve-wracking process for any employee, but is it a fair playing field. </p>
+                    <span>-John Doel | Fouder, ABC</span>
+            </div>
+            <div class="slide">
+                <img src="./img/lady.png" alt="">
+                <p>Glassdoor's annual Employees' Choice Awards honor the Best Places to Work across North America and parts of Europe.
+                    Making the case for a promotion or raise is a nerve-wracking process for any employee, but is it a fair playing field. </p>
+                    <span>-John Doel | Fouder, ABC</span>
+            </div>
+            <div class="slide">
+                <img src="./img/lady.png" alt="">
+                <p>Glassdoor's annual Employees' Choice Awards honor the Best Places to Work across North America and parts of Europe.
+                    Making the case for a promotion or raise is a nerve-wracking process for any employee, but is it a fair playing field. </p>
+                    <span>- John Doel | Founder at ABC</span>
+            </div>
+        </div>
+        <div class="slider-dots"></div>
+    </div>
+</section>
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
