updated css and html

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li><a href="#services">Services</a></li>
                 <li> <a href="#works">Works</a></li>
                 <li><a href="#blog">Blog</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     <header>
@@ -82,14 +83,13 @@
 
                     Always open for synergies and collaborations.</p>
                 <div class="social">
-                    <a href="#"><img src="./img/website.svg" alt=""></a>
-                    <a href="#"><img src="./img/linkedin icon.svg" alt=""></a>
-                    <a href="#"><img src="./img/youtube.svg" alt=""></a>
-                    <a href="#"><img src="./img/github.svg" alt=""></a>
-                    <a href="#"><img src="./img/instagram.svg" alt=""></a>
-                    <a href="#"><img src="./img/twitter.svg" alt=""></a>
-                    <a href="#"><img src="./img/facebook.svg" alt=""></a>
-                    <a href="#"><img src="./img/Pinterest.svg" alt=""></a>
+                    <a href="https://www.linkedin.com/in/rpremofficial/"><img src="./img/linkedin icon.svg" alt=""></a>
+                    <a href="https://www.youtube.com/c/rprem"><img src="./img/youtube.svg" alt=""></a>
+                    <a href="https://github.com/rpremOfficial"><img src="./img/github.svg" alt=""></a>
+                    <a href="https://www.instagram.com/rpremofficial/"><img src="./img/instagram.svg" alt=""></a>
+                    <a href="https://twitter.com/rpremOfficial"><img src="./img/twitter.svg" alt=""></a>
+                    <a href="https://www.facebook.com/rpremOfficial"><img src="./img/facebook.svg" alt=""></a>
+                    <a href="https://in.pinterest.com/rpremOfficial/"><img src="./img/Pinterest.svg" alt=""></a>
                 </div>
             </div>
         </div>
@@ -302,7 +302,7 @@
 
     </section>
 
-    <section class="contact">
+    <section id="contact" class="contact">
         <div class="container">
             <h1 class="section-heading">Contact <span>US</span></h1>
             <p>We love to hear from you, Contact us here</p>
@@ -340,16 +340,8 @@
     </section>
 
     <footer>
-        <img class="footer-logo" src="./img/Profile Photo.png" alt="">
-        <div class="footer-socials">
-            <a href="#"><img src="img/pintrest.svg" alt=""></a>
-            <a href="#"><img src="img/pintrest.svg" alt=""></a>
-            <a href="#"><img src="img/pintrest.svg" alt=""></a>
-            <a href="#"><img src="img/pintrest.svg" alt=""></a>
-             <a href="#"><img src="img/pintrest.svg" alt=""></a>
-
-        </div>
-        <div>
+        <img class="footer-logo" src="./img/logo rprem png.png" alt="">
+        <div class="copyright">
             copyright 2021 © prem kumar. All rights reserved.
         </div>
     </footer>
