--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="right items-center">
-                    <button class="btn btn-primary">Contact</button>
+                    <a href="#contact"><button class="btn btn-primary">Contact</button></a>
                 </div>
             </nav>
             <div class="hero flex items-center justify-between">
@@ -67,11 +67,11 @@
     </header>
 
     <section id="about" class="about">
-        <div class="container flex items-center">
-            <div class="flex-1">
+        <div class="container flex items-center about-inner-wrap">
+            <div class="flex-1 left">
                 <img class="about-me-img" src="./img/PicsArt_75 copy.jpg" alt="">
             </div>
-            <div class="flex-1">
+            <div class="flex-1 right">
                 <h1>About <span>Me</span></h1>
                 <h3>Hello! I'm Prem Kumar</h3>
                 <p> A first year undergrad pursuing B.Tech in Computer Science at IIIT Bhagalpur. <br>
