Added backend file
for contact section

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <h6>IIIT Bhagalpur Campus Sabour, Bhagalpur - 813210</h6>
                 </div>
             </div>
-            <form action="">
+            <form id="contact-form" action="contact.php">
                 <div class="input-wrap">
                     <input type="text" placeholder="Your Name *">
                     <input type="email" placeholder="Your Email *">
