added logo in mobile and tablet view

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <body>
     <div class="site-main-wrapper">
-        
+    <div class="mobile-logo">
+        <img src="./img/logo rprem png.png">
+    </div>
         <button class="hamberger">
             <img src="./img/hamberger.svg" alt="">
         </button>
