--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <p> Learning life: To live the best life possible <br>
                         Always ready to have new experiences, meet new people and learn new things.
                     </p>
-                    <button class="btn btn-secondary">DOWNLOAD CV</button>
+                    <a href="https://1drv.ms/w/s!AjY0y6ivtroIhcclcqXC5cazPspdHg?e=FraS0F"><button class="btn btn-secondary">DOWNLOAD CV</button></a>
                 </div>
             </div>
         </div>
@@ -71,7 +71,7 @@
     <section id="about" class="about">
         <div class="container flex items-center about-inner-wrap">
             <div class="flex-1 left">
-                <img class="about-me-img" src="./img/PicsArt_75 copy.jpg" alt="">
+                <img class="about-me-img" src="./img/pic for about in bw.jpg" alt="">
             </div>
             <div class="flex-1 right">
                 <h1>About <span>Me</span></h1>
@@ -157,35 +157,27 @@
             <div class="slider">
                 <div class="slide">
                     <img src="./img/lady.png" alt="">
-                    <p>Glassdoor's annual Employees' Choice Awards honor the Best Places to Work across North America
-                        and parts of Europe.
-                        Making the case for a promotion or raise is a nerve-wracking process for any employee, but is it
-                        a fair playing field. </p>
-                    <span>-John Doel | Fouder, ABC</span>
+                    <p>we appreciate all of the participant who participate logo making competition we now come with the result.
+                        congratulation @Prem Kumar yrs design logo we take as our official AI/ML Club logo. </p>
+                    <span>-Cordinator of AI/ML club IIITBH</span>
                 </div>
                 <div class="slide">
                     <img src="./img/lady.png" alt="">
-                    <p>Glassdoor's annual Employees' Choice Awards honor the Best Places to Work across North America
-                        and parts of Europe.
-                        Making the case for a promotion or raise is a nerve-wracking process for any employee, but is it
-                        a fair playing field. </p>
-                    <span>-John Doel | Fouder, ABC</span>
+                    <p>we appreciate all of the participant who participate logo making competition we now come with the result.
+                        congratulation @Prem Kumar yrs design logo we take as our official AI/ML Club logo. </p>
+                    <span>- Cordinator of AI/ML club IIITBH</span>
                 </div>
                 <div class="slide">
                     <img src="./img/lady.png" alt="">
-                    <p>Glassdoor's annual Employees' Choice Awards honor the Best Places to Work across North America
-                        and parts of Europe.
-                        Making the case for a promotion or raise is a nerve-wracking process for any employee, but is it
-                        a fair playing field. </p>
-                    <span>-John Doel | Fouder, ABC</span>
+                    <p>we appreciate all of the participant who participate logo making competition we now come with the result.
+                        congratulation @Prem Kumar yrs design logo we take as our official AI/ML Club logo. </p>
+                    <span>- Cordinator of AI/ML club IIITBH</span>
                 </div>
                 <div class="slide">
                     <img src="./img/lady.png" alt="">
-                    <p>Glassdoor's annual Employees' Choice Awards honor the Best Places to Work across North America
-                        and parts of Europe.
-                        Making the case for a promotion or raise is a nerve-wracking process for any employee, but is it
-                        a fair playing field. </p>
-                    <span>- John Doel | Founder at ABC</span>
+                    <p>we appreciate all of the participant who participate logo making competition we now come with the result.
+                        congratulation @Prem Kumar yrs design logo we take as our official AI/ML Club logo. </p>
+                    <span>- Cordinator of AI/ML club IIITBH</span>
                 </div>
             </div>
             <div class="slider-dots"></div>
@@ -235,7 +227,7 @@
                 <div class="card">
                     <div class="overlay">
                         <span>Category</span>
-                        <a href="#"><E-learning></E-learning></a>
+                        <a href="#">E-Learning</a>
                     </div>
                     <img src="./img/E-Learning sc.png" alt="">
                 </div>
