--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="left flex-1 flex justify-center">
                     <img src="./img/cutout pic (1).png">
                 </div>
-                <div class="right flex-1">
+                <div class="right flex-1">-
                     <h6>PREM KUMAR</h6>
                     <h1>Passionate for <span>Designing</span> and <span>Development</span></h1>
                     <p> Learning life: To live the best life possible <br>
@@ -313,14 +313,14 @@
                     <h6>IIIT Bhagalpur Campus Sabour, Bhagalpur - 813210</h6>
                 </div>
             </div>
-            <form id="contact-form" action="contact.php">
+            <form id="contact-form" action="./Backend/contact.php">
                 <div class="input-wrap">
-                    <input type="text" placeholder="Your Name *">
-                    <input type="email" placeholder="Your Email *">
+                    <input type="text" placeholder="Name*" required data-error="Please enter your name">
+                    <input type="email" placeholder="Email*" required data-error="Please enter your email">
                 </div>
                 <div class="input-wrap-2">
                     <input type="text" placeholder="Your Subject...">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Your Message..."></textarea>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Massage*" class="form-control" required data-error="Write your message"></textarea>
                 </div>
                 <div class="btn-wrapper">
                     <button class="btn btn-primary">Send Message</button>
