added onclic function in send message button

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                     <textarea name="" id="" cols="30" rows="10" placeholder="Massage*" class="form-control" required data-error="Write your message"></textarea>
                 </div>
                 <div class="btn-wrapper">
-                    <button class="btn btn-primary">Send Message</button>
+                    <button class="btn btn-primary" onclick="alert('Submitted Sucessfully')">Send Message</button>
                 </div>
             </form>
         </div>
