update contact section

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                     <h6>IIIT Bhagalpur Campus Sabour, Bhagalpur - 813210</h6>
                 </div>
             </div>
-            <form id="contact-form" action="./Backend/contact.php">
+            <form id="contact-form" method="POST" data-netlify="true">
                 <div class="input-wrap">
                     <input type="text" placeholder="Name*" required data-error="Please enter your name">
                     <input type="email" placeholder="Email*" required data-error="Please enter your email">
