--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="flex-1 right">
                 <h1>About <span>Me</span></h1>
                 <h3>Hello! I'm Prem Kumar</h3>
-                <p> A first year undergrad pursuing B.Tech in Computer Science at IIIT Bhagalpur. <br>
+                <p> A second year undergrad pursuing B.Tech in Computer Science at IIIT Bhagalpur. <br>
                     Founded Otarea Educore for helping students of schools and tier 2,3 college, Along with a wonderful
                     team.
 
@@ -301,7 +301,7 @@
                 <div class="card">
                     <img src="./img/call support.svg" alt="">
                     <h2>Call us on</h2>
-                    <h6>+91 7303274275</h6>
+                    <h6>+91 7644958700</h6>
                 </div>
                 <div class="card">
                     <img src="./img/mail support.svg" alt="">
