--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <section id="about" class="about">
         <div class="container flex items-center about-inner-wrap">
             <div class="flex-1 left">
-                <img class="about-me-img" src="./img/pic for about in bw.jpg" alt="">
+                <img class="about-me-img" src="./img/20210815_073731_0000.png" alt="">
             </div>
             <div class="flex-1 right">
                 <h1>About <span>Me</span></h1>
